package dev.boooiil.historia.items.crafted;

public class CustomItem extends BaseItem {

}
