classDiagram

    Main ..|> ConfigurationLoader

    ConfigurationLoader o-- GeneralConfig
    ConfigurationLoader o-- ArmorConfig
    ConfigurationLoader o-- WeaponConfig
    ConfigurationLoader o-- CustomItemConfig
    ConfigurationLoader o-- ToolConfig

    ArmorConfig o-- Armor
    WeaponConfig o-- Weapon
    CustomItemConfig o-- CustomItem
    ToolConfig o-- Tool

    CraftedItem <|-- BaseItem

    Armor <|-- CraftedItem
    Weapon <|-- CraftedItem
    CustomItem <|-- CraftedItem
    Tool <|-- CraftedItem

    ItemGetter --|> ConfigurationLoader

    ItemValidator --|> ConfigurationLoader

    class Main {

        +server() : Server
        +disable() : void
        -registerEvent(Listener) : void
        -registerCommand(String, CommandExecutor) : void
        -registerRunnable(Runnable) : void
        -registerRunnable(Runnable, Long) : void

    }

    class BaseConfiguration~T~ {

        +loadConfiguration(String) : void
        +getConfiguration() : YamlConfiguration
        +getSet() : Set~String~
        +getMap() : HashMap&lt;String, T>
        +isValid(String) : boolean
        +createNew(String) : T*
        +getObject(String) : T*
        -populateMap() : void

    }

    class ConfigurationLoader {

        -ArmorConfig armorConfig$
        -WeaponConfig weaponConfig$
        -GeneralConfig generalConfig$
        -CustomItemConfig customItemConfig$
        -ToolConfig toolConfig$

        +getArmorConfig()$ : ArmorConfig
        +getWeaponConfig()$ : WeaponConfig
        +getGeneralConfig()$ : GeneralConfig
        +getCustomItemConfig()$ : CustomItemConfig
        +getToolConfig()$ : ToolConfig

        +init()$ : void
        +reload()$ : void

    }

    class ArmorConfig {

        +createNew(String): Armor
        +getObject(List~String~ inputItems, List~String~ inputShape): Armor
        +getObject(String): Armor
        +validShape(List~String~ shape): boolean
        +getAllShapes(): List~List~String~~
        +getAllMatchingShape(List~String~ shape): List~CraftedItem~

    }

    class WeaponConfig {

        +createNew(String): Weapon
        +getObject(List~String~ inputItems, List~String~ inputShape): Weapon
        +getObject(String): Weapon
        +validShape(List~String~ shape): boolean
        +getAllShapes(): List~List~String~~
        +getAllMatchingShape(List~String~ shape): List~CraftedItem~

    }

    class GeneralConfig {

        +boolean debug

        +GeneralConfig()

    }

    class CustomItemConfig {

        +createNew(String): CustomItem
        +getObject(List~String~ inputItems, List~String~ inputShape): CustomItem
        +getObject(String): CustomItem
        +validShape(List~String~ shape): boolean
        +getAllShapes(): List~List~String~~
        +getAllMatchingShape(List~String~ shape): List~CraftedItem~
        +getAllMatchingMaterials(List~String~ materials): List~CraftedItem~

    }

    class ToolConfig {

        +createNew(String): Tool
        +getObject(List~String~ inputItems, List~String~ inputShape): Tool
        +getObject(String): Tool
        +validShape(List~String~ shape): boolean
        +getAllShapes(): List~List~String~~
        +getAllMatchingShape(List~String~ shape): List~CraftedItem~

    }

    class BaseItem {

        #boolean valid
        #ItemStack itemStack

        +BaseItem()
        +BaseItem(ItemStack)
        +getItemStack() : ItemStack
        +isValid() : boolean

    }

    class CraftedItem {

        #List~String~ recipeShape
        #List~String~ recipeItems
        #List~String~ proficiencies
        #boolean isShaped

        +getRecipeItems() : List~String~
        +getRecipeShape() : List~String~
        +isValidRecipe(List~String~ inputItems, List~String~ inputShape) : boolean
        +isShapeDependent() : boolean
        +canCraft(String) : boolean

    }

    class Armor {

        -String weightClass
        -Integer weight
        -List~Double~ defence
        -List~Integer~ durability

        +Armor(String)
        +getWeightClass() : String
        +getWeight() : Integer
        +getRandomDefenceValue() : Integer
        +getRandomDurabilityValue() : Integer
        +getMinDefenceValue() : Double
        +getMaxDefenceValue() : Double
        +getMinDurabilityValue() : Integer
        +getMaxDurabilityValue() : Integer

    }

    class Weapon {

        -String weightClass
        -Integer weight
        -List~Double~ damageRange
        -List~Double~ speedRange
        -List~Double~ knockbackRange
        -List~Double~ sweepRange
        -List~Integer~ durability

        +Weapon(String)
        +getWeightClass() : String
        +getWeight() : Integer
        +getDamageRange() : List~Double~
        +getSpeedRange() : List~Double~
        +getKnockbackRange() : List~Double~
        +getSweepRange() : List~Double~
        +getDurabilityRange() : List~Double~
        +getRandomDamageValue(): Double
        +getRandomDefenceValue() : Integer
        +getRandomDurabilityValue() : Integer
        +getMinDamageValue() : Double
        +getMaxDamageValue() : Double
        +getMinSpeedValue() : Double
        +getMaxSpeedValue() : Double
        +getMinKnockbackValue() : Double
        +getMaxKnockbackValue() : Double
        +getMinSweepingValue() : Double
        +getMaxSweepingValue() : Double
        +getMinDefenceValue() : Double
        +getMaxDefenceValue() : Double
        +getMinDurabilityValue() : Integer
        +getMaxDurabilityValue() : Integer

    }

    class CustomItem {

        -String itemName

        +CustomItem(String)
        +getItemName() : String


    }

    class Tool {

        -String weightClass
        -Integer weight
        -List~Double~ damageRange
        -List~Double~ speedRange
        -List~Double~ knockbackRange
        -List~Integer~ durability

        +Weapon(String)
        +getWeightClass() : String
        +getWeight() : Integer
        +getDamageRange() : List~Double~
        +getSpeedRange() : List~Double~
        +getKnockbackRange() : List~Double~
        +getDurabilityRange() : List~Double~
        +getRandomDamageValue(): Double
        +getRandomDefenceValue() : Integer
        +getRandomDurabilityValue() : Integer
        +getMinDamageValue() : Double
        +getMaxDamageValue() : Double
        +getMinSpeedValue() : Double
        +getMaxSpeedValue() : Double
        +getMinKnockbackValue() : Double
        +getMaxKnockbackValue() : Double
        +getMinDefenceValue() : Double
        +getMaxDefenceValue() : Double
        +getMinDurabilityValue() : Integer
        +getMaxDurabilityValue() : Integer

    }

    class ItemGetter {

        +getArmor(String) : Armor$
        +getWeapon(String) : Weapon$
        +getCustomItem(String) : CustomItem$
        +getTool(String) : Tool$

    }

    class ItemValidator {

        +validArmor(String) : boolean$
        +validWeapon(String) : boolean$
        +validCustomItem(String) : boolean$
        +validTool(String) : boolean$

    }


